<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MoviedesActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/toolbar7">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/des_jpg"
                android:layout_width="180dp"
                android:layout_height="267dp"
                android:layout_marginLeft="16dp"
                android:adjustViewBounds="true"
                android:scaleType="fitXY"
                android:layout_marginTop="16dp"
                android:contentDescription="@string/des_jpg"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/qrcode"
                android:layout_marginStart="16dp" />

            <TextView
                android:id="@+id/des_title"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginRight="16dp"
                android:text="@string/des_title"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/blank"
                app:layout_constraintLeft_toRightOf="@id/des_jpg"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/des_douban"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:textColor="@color/blank"
                android:text="@string/des_douban"
                app:layout_constraintLeft_toRightOf="@id/des_jpg"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/des_title" />

            <TextView
                android:id="@+id/des_info"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:text="@string/des_info"
                android:textSize="10sp"
                android:textColor="@color/blank"
                app:layout_constraintBottom_toTopOf="@id/moviedes_delete"
                app:layout_constraintLeft_toRightOf="@id/des_jpg"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/des_douban" />

            <Button
                android:id="@+id/moviedes_delete"
                android:layout_width="0dp"
                android:layout_height="20dp"
                android:text="删除此影片"
                android:textSize="12sp"
                android:background="@drawable/btn_shape"
                app:layout_constraintBottom_toBottomOf="@id/des_jpg"
                app:layout_constraintLeft_toRightOf="@id/des_jpg"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/des_info" />

            <TextView
                android:id="@+id/des_play1"
                android:layout_width="0dp"
                android:layout_height="20dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/des_play1"
                android:textSize="14sp"
                android:textColor="@color/blank"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/des_jpg" />

            <ListView
                android:id="@+id/des_list1"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                app:layout_constraintBottom_toTopOf="@id/des_play2"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/des_play1" />

            <TextView
                android:id="@+id/des_play2"
                android:layout_width="0dp"
                android:layout_height="20dp"
                android:layout_marginLeft="16dp"
                android:text="@string/des_play2"
                android:textSize="14sp"
                android:textColor="@color/blank"
                app:layout_constraintBottom_toTopOf="@id/des_list2"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/des_list1" />

            <ListView
                android:id="@+id/des_list2"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                app:layout_constraintBottom_toTopOf="@id/des_down"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/des_play2" />

            <TextView
                android:id="@+id/des_down"
                android:layout_width="0dp"
                android:layout_height="20dp"
                android:layout_marginLeft="16dp"
                android:text="@string/des_down1"
                android:textSize="14sp"
                android:textColor="@color/blank"
                app:layout_constraintBottom_toTopOf="@id/des_list3"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/des_list2" />

            <ListView
                android:id="@+id/des_list3"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/des_down" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>



</androidx.constraintlayout.widget.ConstraintLayout>